View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032829 | Open CASCADE | OCCT:Visualization | public | 2022-02-11 15:06 | 2022-02-11 16:35 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Product Version | 7.6.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032829: Visualization - dynamic highlight results are not cleared by AIS_InteractiveContext::Redisplay() | ||||
Description | After calling AIS_InteractiveContext::Redisplay() / AIS_InteractiveContext::RecomputeSelectionOnly() highlighting state might keep removed Owner, which can be later selected. | ||||
Steps To Reproduce | pload MODELING OCAF XDE VISUALIZATION # Create a green cube and add it in the document XNewDoc aDoc set aCubeLab [XNewShape aDoc] set aCubeName "CubeEntityInstance" SetName aDoc $aCubeLab $aCubeName XSetColor aDoc $aCubeLab GREEN box aCube 0.1 0.1 0.1 XAddComponent aDoc $aCubeLab aCube # Create a purple cylinder with a location and add it in the document set aCylLab [XNewShape aDoc] set aCylName "CylinderEntityInstance" SetName aDoc $aCylLab $aCylName XSetColor aDoc $aCylLab PURPLE pcylinder aCyl 0.015 0.05 ttranslate aCyl 0.3 0.1 0.13 XAddComponent aDoc $aCylLab aCyl XUpdateAssemblies aDoc # Update/display the document then fit the view vinit View1 vselprops localSelHighlight -dispMode -1 XDisplay aDoc -dispMode 1 -docPrefix 0 vfit # Parenting configuration : cube is the parent of cylinder vparent $aCubeName -ignoreVisu vchild $aCubeName -add $aCylName # Check if the set location works (cube moving with cylinder) vlocation $aCylName -setLocation 0. 0. -0.2 vlocation $aCubeName -setLocation 0. 0. 0.1 # Face selection mode vselmode -set FACE 1 # Check if the face selection mode works with the cylinder vmoveto 370 270 #vselect 370 270 # Display the cylinder (if bug1 has been executed) vdisplay $aCylName # Select the top face of the cylinder vselect 370 270 #vselect 370 271; # will be OK if not the same pixel # Move the cylinder but the selected face is not updated vlocation $aCylName -setLocation 0. 0. 0. Result: selected Face is displayed at old position. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR32829 has been created by kgv. SHA-1: c26e783675b82e4f0d551440d0bc118ab4cdc20e Detailed log of new commits: Author: kgv Date: Fri Feb 11 15:29:35 2022 +0300 0032829: Visualization - dynamic highlight results are not cleared by AIS_InteractiveContext::Redisplay() AIS_InteractiveContext::RecomputeSelectionOnly() now removes old Owners of recomputed object from selection results. vdisplay command now resets AIS_ViewController::ResetPreviousMoveTo() cache. |
|
Branch CR32829 has been updated forcibly by kgv. SHA-1: 84e8a5f88191acb2bf266f24d9905a52cff2c20e |