0032829: Visualization - dynamic highlight results are not cleared by AIS_InteractiveContext::Redisplay()

AIS_InteractiveContext::RecomputeSelectionOnly() now removes old Owners of recomputed object from selection results.
vdisplay command now resets AIS_ViewController::ResetPreviousMoveTo() cache.